[package]
name = "prolink-connect"
version = "0.1.0"
authors = ["Jonas Liljestrand <jonas.liljestrand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "*"
nom-derive = "*"
bytes = "*"
pnet = "*"
ipnetwork = "*"
